--- a/assets/rt.custom.scss.liquid
+++ b/assets/rt.custom.scss.liquid
@@ -3592,6 +3592,7 @@ body.templateIndex {
     bottom: 0;
     top: 0;
     right: 0;
+    left: 0;
     background: none!important;
     border: 2px solid {{settings.product_hover_border_color | default: '#d9121f'}}!important;
     z-index: 0;
