--- a/snippets/header-11.liquid
+++ b/snippets/header-11.liquid
@@ -50,7 +50,9 @@
           </div>
           {%- endif -%}
           <div class="overflow-menu2">
+            {%- comment -%}
             {%- section 'header-menu2' -%}
+            {%- endcomment -%}
           </div>
         </div>
       </div>
