--- a/snippets/shopify-head.liquid
+++ b/snippets/shopify-head.liquid
@@ -69,5 +69,7 @@ var theme = {
  
 </script>
 <script src="{{ 'jquery-2.1.4.min.js' | asset_url }}" defer="defer"></script>
+{%- comment -%}
 {%-if settings.revolution_slider_used-%}{%- include 'roarvslider-supp' -%}{%-endif-%}
+{%- endcomment -%}
 {%- include 'weketing-tracking' -%}
