--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -2,7 +2,7 @@
 
 <script>
 
-_gs("event", "Viewed Product", {
+/* _gs("event", "Viewed Product", {
   id: "{{ product.id }}",
   name: "{{ product.title }}",
   type: "{{ product.type }}",
@@ -28,10 +28,6 @@ _gs("event", "Viewed Product", {
   optionsCount: "{{ product.options.size }}",
 });
 
-</script>
-
-<script>
-
 var cartButton =  document.getElementById(“your-cart-button-id“);
 
 function addProductEvent(){
@@ -44,5 +40,5 @@ function addProductEvent(){
  });
 };
 cartButton.addEventListener("click", _gs(addProductEvent))
-
+ */
 </script>
