--- a/assets/rt.application.scss.liquid
+++ b/assets/rt.application.scss.liquid
@@ -6093,11 +6093,11 @@ body:not(.templateIndex) .product-list .product {
       width: 100%;
       object-fit: contain;
     }
-    &.aspect-ratio-crop {
+    /* &.aspect-ratio-crop {
       .main-images-wrapper img {
         object-fit: cover;
       }
-    }
+    } */
   }
 }
 
