moved preface footer to preset

--- a/sections/preface-footer.liquid
+++ b/sections/preface-footer.liquid
@@ -1666,6 +1666,13 @@
                 }
             ]
         }
+    ],
+    "presets": [
+        {
+            "name": "Preface Footer",
+            "category": "Footer"
+        }
     ]
+
 }
 {% endschema %}
