--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,8 +1,8 @@
-<header class="header-type-17">
+<header class="header-type-11">
   <div class="background-header"></div>
   <div class="slider-header">
     <!-- Top of pages -->
-    <div id="top" class="{%- if settings.header_layout == '1' -%}full-width{%- elsif settings.header_layout == '4' -%}fixed3 fixed2{%- elsif settings.header_layout == '3' -%}fixed2{%- else -%}fixed{%- endif -%}">
+    <div id="top" class="full-width">
       <div class="background-top"></div>
       <div class="background">
         <div class="shadow"></div>
@@ -10,29 +10,28 @@
           <div class="container">
             <div class="row">
               <!-- Header Left -->
-              <div class="col-sm-4 orderable" id="header-left">
-                {%- section 'header-top-block' -%}
-                <!-- Links -->
-                <ul class="menu">
-                  {%- if shop.customer_accounts_enabled -%}
-                  <li><a href="/account">{{ 'general.top.my_account' | t }}</a></li>
-                  {%- endif -%}
-                  {%- if settings.wishlist_enable -%}
-                  <li><a href="{{pages[settings.wishlist_page].url}}" id="wishlist-total">{{ 'general.top.wishlist' | t }}</a></li>
-                  {%- endif -%}
-                  <li><a href="/cart">{{ 'general.cart_info.cart' | t }}</a></li>
-                  <li><a href="/checkout">{{ 'general.cart_info.checkout' | t }}</a></li>
-                </ul>
-              </div>
-              <!-- Header Center -->
-              <div class="col-sm-4" id="header-center">		
+              <div class="col-sm-3" id="header-left">
                 <!-- Logo -->
                 {%- include "header-logo" -%}
               </div>
+              <!-- Header Center -->
+              <div class="col-sm-6" id="header-center">		
+                <!-- Search -->
+                <form action="/search" method="get" role="search" class="search_form">
+                  <div class="button-search">{%- include "search-icon" with "form" -%}</div>
+                  <input type="search" name="q"  class="input-block-level search-query" id="search_query" placeholder="{{ 'search.general.placeholder' | t }}" />
+                  <div id="autocomplete-results" class="autocomplete-results"></div>
+                  <input type="hidden" name="type" value="product" />
+                </form>
+              </div>
               <!-- Header Right -->
-              <div class="col-sm-4" id="header-right">
-                <!-- Currency & Language -->
-                {%- include 'currencies-switcher' -%}
+              <div class="col-sm-3 orderable" id="header-right">
+                {%- comment -%}
+                {%- section 'header-top-block' -%}
+                {%- endcomment -%}
+                {%- if shop.customer_accounts_enabled -%}
+                <a href="/account" class="my-account">{%- include "account-icon" -%}</a>
+                {%- endif -%}
                 {%- include 'cartblock' with 'header' -%}
               </div>
             </div>
@@ -42,7 +41,7 @@
           <div class="container container-megamenu2 orderable">
             {%- endif -%}
             <!-- Menu -->
-            <div  class="megamenu-background">
+           	<div  class="megamenu-background">
               <div class="">
                 <div class="overflow-megamenu container menu-one-only">
                   {%- section 'header-menu1' -%}
@@ -70,3 +69,8 @@
     </div>
   </div>
 </header>
+{% schema %}
+{
+  "name": "Header"
+}
+{% endschema %}
